--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
-
-
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .profile-Card{
     border: 2px solid white;
     border-radius: 10px;
@@ -19,7 +23,7 @@ h3{
     background-color: rgb(57, 57, 250);
     border: 1px solid blue; border-radius: 10px;
     box-shadow: 2px 2px 2px rgb(172, 172, 247);
-    margin-top: 10px; margin-left: 100px; padding: 2px 10px;
+    margin-top: 10px; padding: 2px 10px;
     cursor: pointer; color: rgb(251, 251, 252);
 } 
 p{
