--- a/style.css
+++ b/style.css
@@ -21,10 +21,11 @@ h3{
 }
 #generateBtn{
     background-color: rgb(57, 57, 250);
-    border: 1px solid blue; border-radius: 10px;
+    border: 1px solid blue; border-radius: 50px;
     box-shadow: 2px 2px 2px rgb(172, 172, 247);
-    margin-top: 10px; padding: 2px 10px;
+    margin-top: 10px; padding: 7px 15px;
     cursor: pointer; color: rgb(251, 251, 252);
+    font-size: larger;
 } 
 p{
     font-weight: bold; color: rgb(85, 85, 150);
